# thought-miner

./: README.md  docker-compose.test.yml  docker-compose.yml  justfile  package-lock.json  package.json
thought-miner-alignment/: Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
thought-miner-alignment/src/thought_miner_alignment/: __main__.py  align.py  app.py  model.py
thought-miner-alignment/src/thought_miner_alignment/thought_miner_alignment/: __main__.py
thought-miner-data/: MANIFEST.in  README.md  pyproject.toml
thought-miner-data-access/: MANIFEST.in  README.md  pyproject.toml
thought-miner-data-access/src/thought_miner_data_access/: datastore.py  model.py  postgres.py
thought-miner-data-model/: MANIFEST.in  README.md  pyproject.toml
thought-miner-embeddings/: Dockerfile  MANIFEST.in  README.md  pyproject.toml
thought-miner-embeddings/src/thought_miner_embeddings/: __init__.py  __main__.py  app.py
thought-miner-embeddings/src/thought_miner_embeddings/core/: api.py  log.py
thought-miner-embeddings/src/thought_miner_embeddings/thought_miner_embeddings/: __main__.py
thought-miner-transcribe/: Dockerfile  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
thought-miner-transcribe/src/thought_miner_transcribe/: __init__.py  __main__.py  api.py  app.py  commons.py  model.py  transcribe.py
thought-miner-transcribe/src/thought_miner_transcribe/thought_miner_transcribe/: __main__.py
